Incorporated movie titles and ratings into site

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Flixster</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body style="background-color: black;">
     <div>
         <h1 class="center_form" style="font-family:monospace;">📽️ FLIXSTER 📽️</h1>
     </div>
