Load more pages button feature implemented and running

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
         <h2 style="color: gold; font-family: monospace; font-size: 35px; display: flex; justify-content: center;">Now Playing</h2>
     </div>
 
-    <div id="movieResults" class="poster-format">
-        
+    <div id="movie-grid"> </div>
+
+    <div style="margin-bottom: 80px; display: flex; justify-content: center;">
+        <form method="GET">
+            <button id = "load-more-movies-btn" type ="submit">Load More Movies</button>
+        </form>
     </div>
 
     <script src="script.js"></script>
