Changed loadMovies async function to take in url as a parameter for further use of function when searching for movies using different api urls

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <div style="margin-bottom: 80px; display: flex; justify-content: center;">
         <form method="GET">
-            <input id = "userSearch" type="text" name="searchMovie" placeholder="Search Flixster">
-            <button id = "submitButton" type ="submit">Search</button>
+            <input id = "search-input" type="text" name="searchMovie" placeholder="Search Flixster">
+            <button id = "search-button" type ="submit">Search</button>
         </form>
     </div>
 
