Implemented cnacel search button feature

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
             <input id = "search-input" type="text" name="searchMovie" placeholder="Search Flixster">
             <button id = "search-button" type ="submit">Search</button>
         </form>
+        <button id= close-search-btn type="submit">❌</button>
     </div>
-
+    
 
     <div style="margin-bottom: 50px;">
         <h2 style="color: gold; font-family: monospace; font-size: 35px; display: flex; justify-content: center;">Now Playing</h2>
